# cpp-util

./: README.md
include/: Conversion.h  Doxyfile  FileUtil.h  IBitStream.h  OBitStream.h  RandomUtil.h  RunningAverageQueue.h  ServiceController.h  ServiceThread.h  StringTokenizer.h  Utility.h
include/cpputil/: BitReader.h  BitWriter.h  Buffer.h  Clock.h  ConsoleApplicationUtil.h  Conversion.h  ExceptionBase.h  FileUtil.h  GenericParameters.h  IBitStream.h  MakeService.h  OBitStream.h  RandomUtil.h  RunningAverageQueue.h  ServiceController.h  ServiceManager.h  ServiceThread.h  StringTokenizer.h  Utility.h
src/: CMakeLists.txt
src/test/: CMakeLists.txt  main.cpp
